Update Пример моей задачи разработчикам (Новый виджет) .md

--- a/Пример моей задачи разработчикам (Новый виджет) .md
+++ b/Пример моей задачи разработчикам (Новый виджет) .md
@@ -1,3 +1,5 @@
+# [Приватные уведомления][Виджет]: просмотр приватных уведомлений пользователя
+
 **Краткий список подзадач:**
 * [ ] 1. В подраздел "Разное" всем пользователям добавить новый виджет "Приватные уведомления"  
 * [ ] 2. Виджет состоит из двух разделов
