Update Пример моей задачи разработчикам (Новая сущность) .md

--- a/Пример моей задачи разработчикам (Новая сущность) .md
+++ b/Пример моей задачи разработчикам (Новая сущность) .md
@@ -25,8 +25,8 @@
     * Удалено - серый
 
 1. В раздел меню "Создать" всем пользователям системы добавить кнопку "Приватное уведомление"
-
-![image](/uploads/f355df553b82d985f47e94a8ef162f53/image.png)
+ 
+![Image alt](https://github.com/{username}/{repository}/raw/{branch}/{path}/image.png)
 
 2. При активации кнопки "Приватное уведомление" открывается виджет создания, которое состоит из набора обязательных и необязательных полей:
 * Название - обязательное поле. По умолчанию: "Приватное уведомление"
