Update Пример моей задачи разработчикам (Новый виджет) .md

--- a/Пример моей задачи разработчикам (Новый виджет) .md
+++ b/Пример моей задачи разработчикам (Новый виджет) .md
@@ -18,7 +18,7 @@
 
 3. Таблица виджета включает в себя следующие столбцы и значения:
 * "Дата отправки" - Дата и время изменения статуса БП уведомления на "Отправлено"
-* "Статус" - статус БП. Статус БП сделать в виде цветных стикиров (цвет аналогичный тому, что в БП). Пример: https://system.ndv.ru/#/widget/resale_orders?form=%7B%22code%22:%22resale_orders__smart_table_form%22,%22properties%22:%5B%7B%22code%22:%22dateFilterType%22,%22value%22:%22%D0%BF%D0%BE%20%D0%B4%D0%B0%D1%82%D0%B5%20%D0%BF%D0%BE%D1%81%D0%BB%D0%B5%D0%B4%D0%BD%D0%B5%D0%B3%D0%BE%20%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D1%8F%22%7D,%7B%22code%22:%22start_date%22,%22value%22:null%7D,%7B%22code%22:%22end_date%22,%22value%22:null%7D,%7B%22code%22:%22client_name%22,%22value%22:%22%22%7D,%7B%22code%22:%22client_phone%22,%22value%22:%22%22%7D,%7B%22code%22:%22type%22,%22value%22:%5B%22%D0%9F%D1%80%D1%8F%D0%BC%D0%B0%D1%8F%20%D0%BF%D1%80%D0%BE%D0%B4%D0%B0%D0%B6%D0%B0%22,%22%D0%92%D0%B7%D0%B0%D0%B8%D0%BC%D0%BE%D0%B7%D0%B0%D1%87%D0%B5%D1%82%22,%22%D0%90%D0%BB%D1%8C%D1%82%D0%B5%D1%80%D0%BD%D0%B0%D1%82%D0%B8%D0%B2%D0%B0%22,%22%D0%9E%D0%B1%D1%8A%D0%B5%D0%BA%D1%82%20%D0%B8%D0%B7%20%D0%B1%D0%B0%D0%B7%D1%8B%22,%22%D0%9D%D0%B0%20%D0%BF%D0%BE%D0%B4%D0%B1%D0%BE%D1%80%22,%22%D0%A1%D0%BE%D0%BF%D1%80%D0%BE%D0%B2%D0%BE%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BF%D0%BE%D0%BA%D1%83%D0%BF%D0%BA%D0%B0%22,%22%D0%A1%D0%BE%D0%BF%D1%80%D0%BE%D0%B2%D0%BE%D0%B6%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BF%D1%80%D0%BE%D0%B4%D0%B0%D0%B6%D0%B0%22,%22%D0%9E%D1%86%D0%B5%D0%BD%D0%BA%D0%B0%22%5D%7D,%7B%22code%22:%22managers%22,%22value%22:%5B%2287467%22,%22332354%22,%22332539%22,%22332624%22,%22332670%22,%22332816%22,%22333001%22,%2211960860%22,%2211995543%22,%2211995632%22,%2221287802%22,%2221287840%22,%2221287871%22,%2225481964%22,%2227151572%22,%2227503616%22,%2227925824%22,%2228132069%22,%2228159776%22%5D%7D,%7B%22code%22:%22hide_test_data%22,%22value%22:true%7D,%7B%22code%22:%22status%22,%22value%22:%5B%5D%7D,%7B%22code%22:%22active_tasks%22,%22value%22:%22%22%7D,%7B%22code%22:%22only_overdue_tasks%22,%22value%22:false%7D,%7B%22code%22:%22client_service_status%22,%22value%22:%5B%5D%7D,%7B%22code%22:%22adv%22,%22value%22:%5B%5D%7D,%7B%22code%22:%22source%22,%22value%22:%5B%5D%7D,%7B%22code%22:%22lead_source%22,%22value%22:%5B%5D%7D%5D,%22childForms%22:%7B%7D%7D     
+* "Статус" - статус БП. Статус БП сделать в виде цветных стикиров (цвет аналогичный тому, что в БП). Пример: [ссылка]   
 ![image](/uploads/37537006619eb777b6d950c715030108/image.png)    
 * "Название" - значение из свойства БП "Название"
 * "Содержание" - значение из свойства БП "Содержание"
@@ -41,7 +41,7 @@
 * Строки, где Автор НЕ текущий пользователь: залить красным цветом
 
 Также нужно добавить чередование заливки строк (чтобы строки выделялись одна от одной, если они одинакового цвета).    
-Пример: https://system.ndv.ru/#/widget/poke_realty?complexId=7830276&housingIds=%5B25542259%5D    
+Пример: [ссылка]   
 * Красный и синий цвет строк
 * Цветовое чередование строк    
 ![image](/uploads/a5cf794ba730c0676fce7fe9e2d85863/image.png)
