Update Пример моей задачи разработчикам (Новый виджет) .md

--- a/Пример моей задачи разработчикам (Новый виджет) .md
+++ b/Пример моей задачи разработчикам (Новый виджет) .md
@@ -35,13 +35,12 @@
 * Автор - поле с мулти выбором из выпадающего списка значений всех пользователей системы. По умолчанию: пусто
 * Получатели - поле с мулти выбором из выпадающего списка значений всех пользователей системы. По умолчанию: пусто
 
-5. Условное форматирование в виджете: требуется визуально выделить уведомления, которые пользователь создал и которые отправил.    
-Предлагаю:
+5. Условное форматирование в виджете: требуется визуально выделить уведомления, которые пользователь создал и которые отправил:
 * Строки, где Автор текущий пользователь: залить синим цветом
 * Строки, где Автор НЕ текущий пользователь: залить красным цветом
 
-Также нужно добавить чередование заливки строк (чтобы строки выделялись одна от одной, если они одинакового цвета).    
-Пример: [ссылка]   
+Также нужно добавить чередование заливки строк (чтобы строки не сливались и отличались одна от одной, если они одинакового цвета).    
+Пример заливки и чередования: [ссылка]   
 * Красный и синий цвет строк
 * Цветовое чередование строк    
 ![image](/uploads/a5cf794ba730c0676fce7fe9e2d85863/image.png)
