--- a/Пример моей задачи разработчикам (Эквайринг) .md
+++ b/Пример моей задачи разработчикам (Эквайринг) .md
@@ -21,7 +21,7 @@
 Функционал для пользователя в ЛКК:    
 * [ ] 10. После активации пользователем кнопки "Оплатить", производиться проверка 
 
-Основное требование и документация: https://securepayments.sberbank.ru/wiki/doku.php/integration:api:start#%D0%BE%D0%BF%D0%BB%D0%B0%D1%82%D0%B0_%D1%81_%D1%80%D0%B5%D0%B3%D0%B8%D1%81%D1%82%D1%80%D0%B0%D1%86%D0%B8%D0%B5%D0%B9_%D1%87%D0%B5%D0%BA%D0%BE%D0%B2_%D0%BD%D0%B0_%D0%BA%D0%BE%D0%BD%D1%82%D1%80%D0%BE%D0%BB%D1%8C%D0%BD%D0%BE-%D0%BA%D0%B0%D1%81%D1%81%D0%BE%D0%B2%D0%BE%D0%B9_%D1%82%D0%B5%D1%85%D0%BD%D0%B8%D0%BA%D0%B5
+Основное требование и документация.
 
 **Сценарий сервиса:**
 1. Менеджер отправляет интерактивное сообщение из CRM, которое позволит клиенту совершить оплату по АД 
@@ -40,7 +40,7 @@
 9.2. В связанную с bookkeeping АД делаем запись в Историю БП
 
 **Подзадачи:**
-1. Научиться писать запрос регистрации заказа, передача корзины (register.do) и получать ответ: https://securepayments.sberbank.ru/wiki/doku.php/integration:api:rest:requests:register_cart#additionalofdparams
+1. Научиться писать запрос регистрации заказа, передача корзины (register.do) и получать ответ.
 * `userName`: ndv-api (тестовый, боевой будет чуть позже) 
 * `password`: ndv (тестовый, боевой будет чуть позже)
 * `orderNumber`: id создаваемого БД платежа
@@ -57,7 +57,7 @@
 * `orderId` - Номер заказа в платёжном шлюзе. Уникален в пределах шлюза.
 * `errorMessage` - Описание ошибки на языке, переданном в параметре language в запросе.
 
-2. Научиться писать запрос состояния заказа (getOrderStatusExtended.do) и получать ответ: https://securepayments.sberbank.ru/wiki/doku.php/integration:api:rest:requests:getorderstatusextended_cart
+2. Научиться писать запрос состояния заказа (getOrderStatusExtended.do) и получать ответ.
 * `userName`: XXX (тестовый, боевой будет чуть позже) 
 * `password`: XXX (тестовый, боевой будет чуть позже)
 * `orderId`: значение, получаемое в ответ на запрос register.do
@@ -119,8 +119,6 @@
 **Функционал для менеджера в CRM:**
 
 5. В БП чата добавить группу кнопок "Быстрые действия", в которой нужно разместить кнопку "Направить клиенту счёт на оплату АД".    
-
-Продажная: https://system.ndv.ru/#/widget/show_business_process?id=26310531
 
 6. Активация кнопки "Направить клиенту счёт на оплату АД" провоцирует проверку:
 * Есть ли у карточки клиента, которая связана с чатом, и квартиры общая нерасторгнутая Сделка:
